--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "debDependencies": {
+  "devDependencies": {
     "csvtojson": "^2.0.10",
     "make-dir": "^3.1.0"
   }
